--- a/public/index.html
+++ b/public/index.html
@@ -323,12 +323,12 @@
                 <div class="flex items-center justify-between mb-6">
                   <div>
                     <div class="text-sm text-zinc-500">Welcome back,</div>
-                    <div class="text-lg font-semibold">Dr. Sarah Johnson</div>
+                    <div class="text-lg font-semibold">Team : The Educators</div>
                   </div>
                   <div
                     class="w-10 h-10 bg-brand-500 rounded-full flex items-center justify-center text-white font-semibold"
                   >
-                    SJ
+                    TE
                   </div>
                 </div>
 
@@ -378,7 +378,7 @@
                       ></i>
                     </div>
                     <div class="flex-1">
-                      <div class="text-sm font-medium">Chemistry Basics</div>
+                      <div class="text-sm font-medium">General knowledge</div>
                       <div class="text-xs text-zinc-500">15 questions</div>
                     </div>
                     <div class="text-xs text-green-400">Published</div>
@@ -395,7 +395,7 @@
                       ></i>
                     </div>
                     <div class="flex-1">
-                      <div class="text-sm font-medium">Algebra Quiz</div>
+                      <div class="text-sm font-medium">Personality Development</div>
                       <div class="text-xs text-zinc-500">20 questions</div>
                     </div>
                     <div class="text-xs text-yellow-400">Draft</div>
@@ -651,8 +651,8 @@
                 class="w-10 h-10 bg-gradient-to-br from-brand-400 to-purple-500 rounded-full"
               ></div>
               <div>
-                <div class="font-medium">Sarah Mitchell</div>
-                <div class="text-sm text-zinc-500">High School Teacher</div>
+                <div class="font-medium">Aditya Wadshankar</div>
+                <div class="text-sm text-zinc-500">Developer At Cisco</div>
               </div>
             </div>
           </div>
@@ -690,8 +690,8 @@
                 class="w-10 h-10 bg-gradient-to-br from-green-400 to-cyan-500 rounded-full"
               ></div>
               <div>
-                <div class="font-medium">David Chen</div>
-                <div class="text-sm text-zinc-500">University Professor</div>
+                <div class="font-medium">Vaibhav Chopde</div>
+                <div class="text-sm text-zinc-500">System Developer</div>
               </div>
             </div>
           </div>
@@ -729,8 +729,8 @@
                 class="w-10 h-10 bg-gradient-to-br from-orange-400 to-pink-500 rounded-full"
               ></div>
               <div>
-                <div class="font-medium">Emily Rodriguez</div>
-                <div class="text-sm text-zinc-500">School Administrator</div>
+                <div class="font-medium">Pratik Ingle</div>
+                <div class="text-sm text-zinc-500">System Analyst</div>
               </div>
             </div>
           </div>
