--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -78,7 +78,7 @@
             <p id="userName" class="font-medium truncate">Admin</p>
             <p class="text-xs text-zinc-500">Administrator</p>
           </div>
-          <button id="logoutBtn" class="text-zinc-500 hover:text-red-400 transition-colors">
+          <button id="logoutBtn" class="text-zinc-500 hover:text-red-400 transition-colors" title="Logout">
             <i data-lucide="log-out" class="w-5 h-5"></i>
           </button>
         </div>
@@ -104,7 +104,7 @@
             <input type="text" id="searchInput" class="w-full pl-12 pr-4 py-3 bg-zinc-900 border border-zinc-800 rounded-xl focus:border-purple-500 outline-none transition-colors" placeholder="Search teachers..." />
           </div>
         </div>
-        <select id="statusFilter" class="px-4 py-3 bg-zinc-900 border border-zinc-800 rounded-xl focus:border-purple-500 outline-none transition-colors">
+        <select id="statusFilter" class="px-4 py-3 bg-zinc-900 border border-zinc-800 rounded-xl focus:border-purple-500 outline-none transition-colors" title="Filter by status">
           <option value="all">All Status</option>
           <option value="active">Active</option>
           <option value="inactive">Inactive</option>
@@ -253,7 +253,8 @@
             method: "DELETE",
             credentials: "include",
           });
-          if (!response.ok) throw new Error("Failed to delete teacher");
+          const data = await response.json();
+          if (!response.ok) throw new Error(data.error || "Failed to delete teacher");
           alert("Teacher deleted successfully!");
           loadTeachers();
         } catch (error) {
