--- a/public/create-quiz.html
+++ b/public/create-quiz.html
@@ -122,6 +122,7 @@
           <button
             id="logoutBtn"
             class="text-zinc-500 hover:text-red-400 transition-colors"
+            title="Logout"
           >
             <i data-lucide="log-out" class="w-5 h-5"></i>
           </button>
@@ -190,6 +191,7 @@
                 name="category"
                 required
                 class="w-full px-4 py-3 bg-zinc-800 border border-zinc-700 rounded-xl focus:border-brand-500 focus:ring-1 focus:ring-brand-500 outline-none transition-colors"
+                title="Select a category"
               >
                 <option value="">Select a category</option>
                 <option value="mathematics">Mathematics</option>
@@ -210,6 +212,7 @@
               <select
                 id="difficulty"
                 name="difficulty"
+                title="Select difficulty level"
                 class="w-full px-4 py-3 bg-zinc-800 border border-zinc-700 rounded-xl focus:border-brand-500 focus:ring-1 focus:ring-brand-500 outline-none transition-colors"
               >
                 <option value="easy">Easy</option>
@@ -229,6 +232,8 @@
                 name="timeLimit"
                 min="1"
                 max="180"
+                title="Enter time limit in minutes"
+                placeholder="30"
                 value="30"
                 class="w-full px-4 py-3 bg-zinc-800 border border-zinc-700 rounded-xl focus:border-brand-500 focus:ring-1 focus:ring-brand-500 outline-none transition-colors"
               />
@@ -242,8 +247,8 @@
               <input
                 type="number"
                 id="passPercentage"
-                name="passPercentage"
-                min="0"
+                name="passPercentage"                title="Enter pass percentage"
+                placeholder="70"                min="0"
                 max="100"
                 value="60"
                 class="w-full px-4 py-3 bg-zinc-800 border border-zinc-700 rounded-xl focus:border-brand-500 focus:ring-1 focus:ring-brand-500 outline-none transition-colors"
